--- a/composer.json
+++ b/composer.json
@@ -8,18 +8,17 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "^6.18.35",
-        "laravel/tinker": "^2.0",
-        "laracasts/presenter": "*"
+        "php": "^8.2",
+        "laracasts/presenter": "*",
+        "laravel/framework": "^10.0",
+        "laravel/tinker": "^2.8",
+        "phpmailer/phpmailer": "^6.9"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
-        "fzaninotto/faker": "^1.9.1",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "fakerphp/faker": "^1.20",
+        "mockery/mockery": "^1.5",
+        "nunomaduro/collision": "^6.4",
+        "phpunit/phpunit": "^9.5"
     },
     "config": {
         "optimize-autoloader": true,
